# cpplox

./: .gitignore  CMakeLists.txt  run.sh
example/benchmark/: equality.lox
example/block/: scope2.lox
example/class/: foo_init.lox
example/method/: bacon.lox
include/: common.h  token.h  util.h
src/: chunk.cc  chunk.h  compiler.cc  compiler.h  debug.cc  debug.h  main.cc  memory.cc  memory.h  parser.cc  parser.h  scanner.cc  scanner.h  value.cc  value.h  value_array.cc  value_array.h  vm.cc  vm.h
src/objects/: object.cc  object.h  objstring.cc  objstring.h
